--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
         "format": "npm run prettier:fix && npm run lint:fix"
     },
     "dependencies": {
+        "@stripe/react-stripe-js": "^1.16.5",
+        "@stripe/stripe-js": "^1.48.0",
         "@types/jest": "^27.5.2",
         "@types/node": "^16.11.47",
         "@types/react": "^18.0.17",
@@ -28,6 +30,7 @@
         "eslint": "^8.21.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-airbnb-typescript": "^17.0.0",
+        "eslint-config-next": "12.2.5",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-function-name": "^2.0.1",
         "eslint-plugin-import": "^2.26.0",
@@ -35,8 +38,7 @@
         "eslint-plugin-prettier": "^4.2.1",
         "eslint-plugin-react": "^7.30.1",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-config-next": "12.2.5",
-        "typescript": "4.8.2",
-        "prettier": "^2.7.1"
+        "prettier": "^2.7.1",
+        "typescript": "4.8.2"
     }
 }
