--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "next": "12.2.5",
         "react": "18.2.0",
         "react-dom": "18.2.0",
+        "react-phone-number-input": "^3.2.19",
         "react-router-dom": "6",
         "sass": "^1.54.4"
     },
